--- a/index.html
+++ b/index.html
@@ -25,6 +25,7 @@
         <p class="header_paragraph">By the same illusion which lifts the horizon of the sea to the level of<br> the
             spectator on a hillside, the sable cloud beneath.</p>
         <button class="header_button">Learn more</button>
+        <img class="img_bg_main" src="./img/Rectangle.png" alt="rect">
         <img class="img_rectangle" src="./img/Rectangle1.png" alt="rect">
         <div class="header_image">
             <img src="./img/Photo.png" alt="central_photo" class="header_image__photo">
@@ -119,6 +120,7 @@
             </div>
             <h2 class="features_text-block__heading">By the same illusion which lifts the horizon.</h2>
         </div>
+        <img class="img_bg_main1" src="./img/bg_blue.png" alt="rect">
         <img class="img_bg_photo" src="./img/bg_photo.png" alt="bg_photo">
         <div class="features_with-icons features_with-icons__union">
             <img class="features_with-icons__ellipse" src="./img/Ellipse_white.png" alt="white">
