--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
         <p class="header_paragraph">By the same illusion which lifts the horizon of the sea to the level of<br> the
             spectator on a hillside, the sable cloud beneath.</p>
         <button class="header_button">Learn more</button>
-        <img class="img_bg_main" src="./img/Rectangle.png" alt="rect">
+        <!-- <img class="img_bg_main" src="./img/Rectangle.png" alt="rect"> -->
         <img class="img_rectangle" src="./img/Rectangle1.png" alt="rect">
         <div class="header_image">
             <img src="./img/Photo.png" alt="central_photo" class="header_image__photo">
