some interaction added

--- a/index.html
+++ b/index.html
@@ -52,7 +52,7 @@
         </div>
     </section>
     <section class="about">
-        <h1 class="about_heading">What we do</h1>
+        <h2 class="about_heading">What we do</h2>
         <div class="about-flex">
             <div class="about_card">
                 <img class="about_card__img" src="./img/about1.png" alt="about_us_1">
@@ -203,10 +203,12 @@
                 <img class="footer_messagearea_title__icon" src="./img/dots.svg" alt="">
                 <h2 class="footer_messagearea_title__heading">Send us a message</h2>
             </div>
-            <p class="footer_messagearea__paragraph">Your email</p>
-            <p class="footer_messagearea__paragraph">Your name</p>
-            <p class="footer_messagearea__paragraph">Your message</p>
-            <button class="footer_messagearea__button">Send</button>
+            <form action="">
+                <p class="footer_messagearea__input">Your email</p>
+                <p class="footer_messagearea__input">Your name</p>
+                <p class="footer_messagearea__input">Your message</p>
+                <input type="submit" class="footer_messagearea__submit" value="Submit"></input>
+            </form>
         </div>
         <div class="footer_contactarea">
             <div class="footer_contactarea_title">
