--- a/index.html
+++ b/index.html
@@ -25,10 +25,10 @@
         <p class="header_paragraph">By the same illusion which lifts the horizon of the sea to the level of<br> the
             spectator on a hillside, the sable cloud beneath.</p>
         <button class="header_button">Learn more</button>
-        <img class="img_bg_main" src="./img/Rectangle.png" alt="rect">
-        <img class="img_rectangle" src="./img/Rectangle1.png" alt="rect">
+        <img class="img_bg_main responsive" src="./img/Rectangle.png" alt="rect">
+        <img class="img_rectangle responsive" src="./img/Rectangle1.png" alt="rect">
         <div class="header_image">
-            <img src="./img/Photo.png" alt="central_photo" class="header_image__photo">
+            <img src="./img/Photo.png" alt="central_photo" class="header_image__photo responsive">
             <h2 class="header_image__title">intro</h2>
             <p class="header_image__paragraph">By the same illusion which lifts the horizon.</p>
             <div class="header_image__side-links">
@@ -120,8 +120,8 @@
             </div>
             <h2 class="features_text-block__heading">By the same illusion which lifts the horizon.</h2>
         </div>
-        <img class="img_bg_main1" src="./img/bg_blue.png" alt="rect">
-        <img class="img_bg_photo" src="./img/bg_photo.png" alt="bg_photo">
+        <img class="img_bg_main1 responsive" src="./img/bg_blue.png" alt="rect">
+        <img class="img_bg_photo responsive" src="./img/bg_photo.png" alt="bg_photo">
         <div class="features_with-icons features_with-icons__union">
             <img class="features_with-icons__ellipse" src="./img/Ellipse_white.png" alt="white">
             <img class="features_with-icons__icon" src="./img/Union.png" alt="Union">
