inputs were changed

--- a/index.html
+++ b/index.html
@@ -204,9 +204,9 @@
                 <h2 class="footer_messagearea_title__heading">Send us a message</h2>
             </div>
             <form action="">
-                <p class="footer_messagearea__input">Your email</p>
-                <p class="footer_messagearea__input">Your name</p>
-                <p class="footer_messagearea__input">Your message</p>
+                <input class="footer_messagearea__input" placeholder="Your e-mail"></input>
+                <input class="footer_messagearea__input" placeholder="Your name"></input>
+                <input class="footer_messagearea__input" placeholder="Your message"></input>
                 <input type="submit" class="footer_messagearea__submit" value="Submit"></input>
             </form>
         </div>
