--- a/index.html
+++ b/index.html
@@ -7,19 +7,41 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link href="https://fonts.googleapis.com/css?family=Muli:400,700,800,900&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="./styles/styles.css">
+    <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <title>Dia</title>
 </head>
 
 <body>
     <header class="header">
-        <nav class="header_navbar">
-            <a href="#" class="header_navbar__link">Dia</a>
-            <a href="#" class="header_navbar__link">Home</a>
-            <a href="#" class="header_navbar__link">About us</a>
-            <a href="#" class="header_navbar__link">Services</a>
-            <a href="#" class="header_navbar__link">Work</a>
-            <a href="#" class="header_navbar__link">Contact us</a>
-            <a href="#" class="header_navbar__link">Hire us</a>
+        <nav class="navbar navbar-expand-lg navbar-light">
+            <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarTogglerDemo01" aria-controls="navbarTogglerDemo01" aria-expanded="false" aria-label="Toggle navigation">
+                <span class="navbar-toggler-icon"></span>
+            </button>
+            <div class="collapse navbar-collapse" id="navbarTogglerDemo01">
+                <ul class="navbar-nav mr-auto mt-2 mt-lg-0">
+                <li class="nav-item header_navbar__link">
+                    <a class="nav-link" href="#">Dia</a>
+                </li>
+                <li class="nav-item header_navbar__link">
+                    <a class="nav-link" href="#">Home</a>
+                </li>
+                <li class="nav-item header_navbar__link">
+                    <a class="nav-link" href="#">About us</a>
+                </li>
+                <li class="nav-item header_navbar__link">
+                    <a class="nav-link" href="#">Services</a>
+                </li>
+                <li class="nav-item header_navbar__link">
+                    <a class="nav-link" href="#">Work</a>
+                </li>
+                <li class="nav-item header_navbar__link">
+                    <a class="nav-link" href="#">Contact us</a>
+                </li>
+                <li class="nav-item header_navbar__link">
+                    <a class="nav-link" href="#">Hire us</a>
+                </li>
+                </ul>
+            </div>
         </nav>
         <h1 class="header_title">Global digital agency</h1>
         <p class="header_paragraph">By the same illusion which lifts the horizon of the sea to the level of<br> the
@@ -235,6 +257,9 @@
             <a href="#" class="footer_navbar__link">Contact Us</a>
         </nav>
     </footer>
+    <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
+    <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
 </body>
 
 </html>
